helm-chart-v2/jaeger-operator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-memory-ingress
  labels:
    app.kubernetes.io/name: jaeger-memory-ingress
    app.kubernetes.io/instance: jaeger-memory-ingress-common-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: query.jaeger.test
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-memory-query
              servicePort: 16686
